apps/longhorn/base/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: metallb-system
  labels:
    app.kubernetes.io/name: metallb-system
