apps/longhorn/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # custom max body size for file uploading like backing image uploading
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
    hajimari.io/enable: "true"
    hajimari.io/appName: Longhorn
    hajimari.io/group: Tools
    hajimari.io/icon: mdi:harddisk
    hajimari.io/info: Block Storage Dashboard
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
      host: longhorn.entropymaker.com
  tls:
    - hosts:
        - "longhorn.entropymaker.com"
      secretName: entropymaker-com-tls
